EHNCP-2141 Java 11 source code minor refactoring